[gd_scene load_steps=6 format=3 uid="uid://c3g1a5d2yvvv1"]

[ext_resource type="Script" path="res://src/ui/tooltip.gd" id="1_kdm6u"]
[ext_resource type="Texture2D" uid="uid://pofb034lf2kp" path="res://assets/icons/tiny_icons.png" id="2_gyvbg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h3jig"]
atlas = ExtResource("2_gyvbg")
region = Rect2(20, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kvvf"]
atlas = ExtResource("2_gyvbg")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjuo1"]
atlas = ExtResource("2_gyvbg")
region = Rect2(10, 0, 10, 10)

[node name="Tooltip" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_kdm6u")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="DamageIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = SubResource("AtlasTexture_h3jig")
expand_mode = 3

[node name="DamageAmt" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HealthIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = SubResource("AtlasTexture_4kvvf")
expand_mode = 3

[node name="HealthAmt" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MoveIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = SubResource("AtlasTexture_hjuo1")
expand_mode = 3

[node name="MoveAmt" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InfoText" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Unit effect"
horizontal_alignment = 1
